@@ -46,6 +46,10 @@ sub _generate_bsub_command {
   $bsub_command .=  q{-o } . $location_of_logs . qq{/$job_name.out };
   $bsub_command .=  q{'} . $archive_script . q{ --samtools_cmd samtools1_1 --exclude_bam --archive_path } . $self->archive_path() . q{ --runfolder_path } . $self->runfolder_path() . q{ --id_run } . $self->id_run();
 
+  if ($self->qc_run) {
+    $bsub_command .= q{ --alt_process qc_run};
+  }
+
   if($position_list){
      $bsub_command .=  $position_list
   }
